deployments/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mongotron
  labels:
    name: mongotron
    environment: production
