deployments/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongotron-service
  namespace: mongotron
  labels:
    app: mongotron
spec:
  selector:
    app: mongotron
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
